Fix the header covering background

--- a/public/app/sass/layout/_header.scss
+++ b/public/app/sass/layout/_header.scss
@@ -6,9 +6,9 @@
 .layout-header {
 	@extend %reset-margins;
 	box-shadow: inset 0 -1rem 0 0 rgba(black, 0.25);
-	background: white image-url('header.jpg') fixed no-repeat;
+	background: #050409 image-url('header.jpg') fixed no-repeat;
 	background-size: cover;
-	background-position: center -500px;
+	background-position: center center;
 	padding: 11rem 0;
 	text-align: center;
 	transition: padding 0.3s;
